--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -20,6 +20,10 @@ on:
         required: true
         default: ''
 
+# 권한 설정 추가
+permissions:
+  contents: write
+
 jobs:
   build-and-run:
     runs-on: ubuntu-latest
@@ -72,5 +76,5 @@ jobs:
         add_options: '-A'
         # 변경사항이 없으면 아무 작업도 하지 않음
         skip_dirty_check: false
-        # GitHub에서 기본 제공하는 토큰 사용
-        
+        # token 파라미터 추가
+        token: ${{ github.token }}
